# mv_synthesis

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: digital_ocean_inference.ipynb  explore_segment.ipynb  nova2_lite.ipynb  nova_embedding.ipynb  try.ipynb  vector_db.ipynb
results/: debug-fused_rank-text_video-firework.json  pipeline_diagram.drawio  test-audio_query_video-synthesis-countingStars.json  test-new_data-synthesis-countingStars.json  test-synthesis-test-sunshine.json  test2-synthesis-test-sunshine.json  xiling-random-text_video-firework.json
scripts/: check_corrupted_videos.py  count_lyrics_duration.py  count_video_duration.py  debug_db_test.py  merge_short_lyrics.py  migrate_db.py  plot_results.py  remove_short_clips.py  run_all_methods.py  validate_db.py
segmentation/song/: audio_config.py
segmentation/video/: __init__.py  scene_runner.py  scene_stats.py  split_video.py
src/evaluation/: video_recall.py
src/segmentation/: __init__.py  create_segmented_dataset.py  embedding_dp.py
src/synthesis/: config.py  db.py  embed_lyrics_lines.py  embed_video_segments.py  ffmpeg_utils.py  generate_recall_cards.py  lyrics_io.py  nova2_lite_model.py  nova2_lite_utils.py  nova_embedding_model.py  postprocess.py  render.py  retrieval.py  selection.py  (+1 more)
synthesis/: config.py  db.py  embed_lyrics_lines.py  embed_video_segments.py  ffmpeg_utils.py  lyrics_io.py  models.py  nova2_lite_model.py  nova_embedding_model.py  postprocess.py  render.py  retrieval.py  synthesize_pipeline.py
web/: README.md  config.json  server.py  start.sh
(+7 files in other folders)
