[project]
name = "mv-synthesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.14",
    "gradient>=3.10.1",
    "langchain>=1.2.0",
    "langchain-aws>=1.1.0",
    "langgraph>=1.0.5",
    "notebook>=7.5.1",
    "numpy>=2.4.0",
    "qdrant-client>=1.16.2",
    "scenedetect[opencv]>=0.6.7.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["segmentation", "synthesis"]
module-root = "src"